--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.6",
     "@zbryikt/voronoijs": "github:zbryikt/voronoijs",
     "firebase": "^9.6.9",
     "next": "12.1.0",
