--- a/.gitignore
+++ b/.gitignore
@@ -2,18 +2,9 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
 
 # production
-/build
+/dist
 
 # misc
 .DS_Store
@@ -25,11 +16,5 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# vercel
-.vercel
+# settings
+/.vscode
