--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "grunt": "1.6.0",
         "grunt-contrib-clean": "^2.0.1",
         "grunt-contrib-concat": "^2.1.0",
+        "grunt-contrib-copy": "^1.0.0",
         "grunt-contrib-uglify": "5.2.1",
         "grunt-contrib-watch": "~1.1.0"
     }
