--- a/.github/workflows/npm-grunt.yml
+++ b/.github/workflows/npm-grunt.yml
@@ -38,6 +38,12 @@ jobs:
       run: |
         npm install
         grunt
+        
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v1
+      with:
+        path: ./dist
+        
   # Deployment job
   deploy:
     environment:
